tests/integration/project_compiler/project_compiler_test/compilation_error/invalid_contract.cairo
%lang starknet

@view
func use_not_whitelisted_hint{syscall_ptr: felt*}(contract_address: felt) {
    tempvar x;
    %{ ids.x = 42 %}
    return ();
}
